--- a/app/src/main/res/layout/app_bar_driver_home.xml
+++ b/app/src/main/res/layout/app_bar_driver_home.xml
@@ -15,8 +15,8 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="@color/lightGray"
-            app:titleTextColor="@color/space"
+            android:background="@color/colorPrimary"
+            app:titleTextColor="@color/white"
             app:popupTheme="@style/AppTheme.PopupOverlay"
             app:theme="@style/ThemeOverlay.AppCompat.Light"/>
 
