--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -113,13 +113,7 @@
                         android:layout_centerHorizontal="true"
                         android:textColor="@color/colorPrimary"
                         android:backgroundTint="@color/white"/>
-                    <RadioButton
-                        android:layout_alignParentEnd="true"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Mode aktif"
-                        android:focusedByDefault="true"
-                        android:textColor="@color/white"/>
+
                 </RelativeLayout>
             </LinearLayout>
 
@@ -243,19 +237,21 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingLeft="60dp"
+                android:paddingLeft="50dp"
                 android:layout_gravity="center_vertical"
                 android:orientation="vertical">
                 <Button
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Terima"
+                    android:textSize="12sp"
                     android:textAllCaps="false"
                     android:padding="8dp"
                     android:backgroundTint="@color/greenbutton"
                     android:id="@+id/btn_accept"/>
 
                 <Button
+                    android:textSize="12sp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Tolak"
@@ -362,78 +358,86 @@
 
 
             </LinearLayout>
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                >
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/txt_rider_name"
-                    android:text="Deen Snuts"
-                    android:textColor="@color/space"
-                    android:textSize="22sp"
-                    android:layout_centerInParent="true"
-                    android:fontFamily="@font/open_sans_bold"
-                    />
-            </RelativeLayout>
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                >
-                <ImageView
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:id="@+id/img_phone_call"
-                    android:src="@drawable/ic_baseline_perm_phone_msg_24"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/txt_rider_number"
-                    android:text="0812577884"
-                    android:textColor="@color/space"
-                    android:textSize="16sp"
-                    android:layout_centerInParent="true"
-                    android:fontFamily="@font/open_sans_light"
-                    />
-            </RelativeLayout>
 
-            <com.kusu.library.LoadingButton
-                android:id="@+id/btn_call_driver"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp"
-                android:text="Call"
-                android:textColor="@color/lightGray"
-                app:lb_buttonColor="@color/colorPrimary"
-                app:lb_isCircular="false" />
-            <com.kusu.library.LoadingButton
-                android:id="@+id/btn_start"
-                android:visibility="gone"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp"
-                android:fontFamily="@font/open_sans_bold"
-                android:text="Start"
-                android:textColor="@color/lightGray"
-                app:lb_buttonColor="@color/colorPrimary"
-                app:lb_isCircular="false" />
-            <com.kusu.library.LoadingButton
-                android:id="@+id/btn_finish"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp"
-                android:fontFamily="@font/open_sans_bold"
-                android:text="Finish"
-                android:textColor="@color/lightGray"
-                app:lb_buttonColor="@color/startuber"
-                app:lb_isCircular="false" />
+                android:orientation="horizontal">
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+                    <TextView
+                        android:id="@+id/txt_rider_name"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/open_sans_bold"
+                        android:text="Deen Snuts"
+                        android:textColor="@color/space"
+                        android:textSize="16sp" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/txt_rider_number"
+                        android:text="0812577884"
+                        android:textColor="@color/space"
+                        android:textSize="12sp"
+                        android:fontFamily="@font/open_sans_light"
+                        />
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_gravity="end"
+                    android:gravity="end"
+                    >
+
+                    <RelativeLayout
+                        android:padding="4dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content">
+                        <de.hdodenhof.circleimageview.CircleImageView
+                            android:layout_width="48dp"
+                            android:id="@+id/btn_call_driver"
+                            android:layout_height="48dp"
+                            android:layout_centerVertical="true"
+                            android:src="@color/colorPrimary"/>
+
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerVertical="true"
+                            android:layout_marginLeft="12dp"
+                            android:backgroundTint="@color/white"
+                            android:layout_marginRight="6dp"
+                            android:src="@drawable/ic_baseline_phone_24"
+                            app:tint="@color/white" />
+                    </RelativeLayout>
+                    <RelativeLayout
+                        android:padding="4dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content">
+                        <de.hdodenhof.circleimageview.CircleImageView
+                            android:layout_width="48dp"
+                            android:layout_height="48dp"
+                            android:layout_centerVertical="true"
+                            android:src="@color/greenbutton"/>
+
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="12dp"
+                            android:id="@+id/btn_finish"
+                            android:layout_centerVertical="true"
+                            android:backgroundTint="@color/white"
+                            android:src="@drawable/ic_baseline_done_24"
+                            app:tint="@color/white" />
+                    </RelativeLayout>
+                </LinearLayout>
+
+            </LinearLayout>
+
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
